# ChangeLog for net-misc/nxserver-freeedition
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/nxserver-freeedition/ChangeLog,v 1.14 2007/09/18 21:52:53 voyageur Exp $

  18 Sep 2007; Bernard Cafarelli <voyageur@gentoo.org>
  nxserver-freeedition-3.0.0-r3.ebuild:
  Fix variables quoting, thanks opfer
  Also clean up the install section

*nxserver-freeedition-3.0.0-r3 (18 Sep 2007)

  18 Sep 2007; Bernard Cafarelli <voyageur@gentoo.org>
  +files/nxserver-3.0.0-r3-setup.patch,
  +nxserver-freeedition-3.0.0-r3.ebuild:
  Third maintenance release
  Thanks Timo Gurr <timo.gurr@gmail.com> for the updated setup patch

*nxserver-freeedition-3.0.0-r2 (22 Jul 2007)

  22 Jul 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -nxserver-freeedition-3.0.0-r1.ebuild,
  +nxserver-freeedition-3.0.0-r2.ebuild:
  Second maintenance release

  06 Jul 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -nxserver-freeedition-3.0.0.ebuild:
  Removed old version

  03 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  nxserver-freeedition-2.1.0.ebuild:
  stable x86, bug 180040

*nxserver-freeedition-3.0.0-r1 (02 Jul 2007)

  02 Jul 2007; Bernard Cafarelli <voyageur@gentoo.org>
  +nxserver-freeedition-3.0.0-r1.ebuild:
  Maintenance release

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
  nxserver-freeedition-2.1.0.ebuild, nxserver-freeedition-3.0.0.ebuild:
  (QA) RESTRICT clean up.

*nxserver-freeedition-3.0.0 (21 Jun 2007)

  21 Jun 2007; Bernard Cafarelli <voyageur@gentoo.org>
  +files/nxserver-3.0.0-setup.patch, +nxserver-freeedition-3.0.0.ebuild:
  Version bump, thanks to Timo Gurr <psy@monsterserver.de> in bug #182779

  11 Jun 2007; Bernard Cafarelli <voyageur@gentoo.org>
  nxserver-freeedition-2.1.0.ebuild:
  Added missing dependencies, bug #181614

  05 Jun 2007; Bernard Cafarelli <voyageur@gentoo.org>
  files/nxserver-2.1.0-init:
  Init script cleanup, thanks to Christian Faulhammer <opfer@gentoo.org>
